User stack overflow fix

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -32,3 +32,8 @@
 ion-grid {
   height: 100%;
 }
+
+ion-router-outlet > *:not(app-home) {
+
+  --ion-background-color: white;
+}
