--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -23,8 +23,8 @@
 }
 
 .logo {
-  width: 175px;
-  height: 175px;
+  width: 125px;
+  height: 125px;
   margin: auto;
   display: block;
 }
