--- a/src/global.scss
+++ b/src/global.scss
@@ -18,7 +18,18 @@
   }
 }
 
-.my-button {
+button[firesquad] {
   border-radius: 50%;
   border: 10px solid white;
+  width: 70px;
+  height: 70px;
+  background-color: transparent;
 }
+
+ion-button[firesquad] {
+  --border-radius: 28px;
+  --height: 56px;
+  width: 100%;
+  --width: 100%;
+}
+
